--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                         </div>
                         <div class="content">
                             Das System sollte möglichst wartungsarm sein. Dieses Ziel trifft sowohl auf Hard- als
-                            auch Software zu. Zweiräder sollen eine maximale Dienstzeit haben, ein wartungsarmes Design
-                            wird also auf lange Zeit die laufenden Kosten senken. Eine Balance zwischen initialen
+                            auch Software zu. Zweiräder sollen eine maximale Dienstzeit haben. Ein wartungsarmes Design
+                            wird auf lange Zeit die laufenden Kosten senken. Eine Balance zwischen initialen
                             Anschaffungskosten und laufenden Wartungskosten muss gefunden werden. Gleiches trifft auf
                             Softwaremodule zu. Diese müssen zukunftsfähig entwickelt werden, um kritische Änderungen
                             möglichst aufwandsarm zu ermöglichen. Sicherheits- und andere Updates sollten nicht durch
