--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             Wirtschaftlichkeit
                         </div>
                         <div class="content">
-                            Das System wird aus einem grundsätzlich wirtschaftlichen Interessen heraus geschaffen, daher
+                            Das System wird aus einem grundsätzlich wirtschaftlichen Interesse heraus geschaffen, daher
                             ist eine Profitgenerierung unerlässlich. Nicht alle Funktionen müssen in ihrer Umsetzung auf
                             wirtschaftlichkeit optimiert sein, summiert müssen sie dem Ziel jedoch gerecht werden.
                         </div>
