--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         <div class="content">
                             Das System wird aus einem grundsätzlich wirtschaftlichen Interesse heraus geschaffen, daher
                             ist eine Profitgenerierung unerlässlich. Nicht alle Funktionen müssen in ihrer Umsetzung auf
-                            wirtschaftlichkeit optimiert sein, summiert müssen sie dem Ziel jedoch gerecht werden.
+                            Wirtschaftlichkeit optimiert sein, summiert müssen sie dem Ziel jedoch gerecht werden.
                         </div>
                     </div>
                     <div class="topic" id="lageunabhängigkeit">
