--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         <div class="content">
                             Das System soll global eingesetzt werden. Daher müssen Komponenten lageunabhängig zur
                             Ausführung ihrer Funktion fähig sein. Abhängikeit von eigens bereitgestellter Infrastruktur
-                            sollte im besten Falle nicht vorhanden, im schlechtesten minimal sein. Das Verwaltungssystem
+                            sollte im besten Fall nicht vorhanden, im schlechtesten minimal sein. Das Verwaltungssystem
                             muss global erreichbar sein. Zahlungsmethoden müssen global zugänglich sein, also auch unter
                             Umständen lokale Zahlungsmittel wie Girokarten akzeptieren. Das Zahlen mit international
                             verwendeten Zahlungsmitteln wie PayPal, SEPA, Stripe, BTC und anderen sollte unterstützt
@@ -359,7 +359,7 @@
                 <div class="column">
                     <span class="author-annotation">Paul Brätz</span>
                     <span>
-                        Aus der Zieldefinition lassen sich Funktionen ableiten, die für den Betrieb des Systems vonnöten
+                        Aus der Zieldefinition lassen sich folgende Funktionen ableiten, die für den Betrieb des Systems vonnöten
                         sind.
                     </span>
                     <div class="topic" id="funktion-ortung">
