--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                             Die Kosten der Nutzung von Zweirädern müssen nach einem Schlüssel berechnet werden. Zwei
                             Möglichkeiten der Abrechnung sind zeit- oder streckenabhängige Gebühren. Bei einer
                             streckenbasierten Abrechnung stellt sich die Datenermittlung und -verarbeitung als
-                            komplizierter heraus, als es die zeitbasierte ermöglichen würde. Die ermittelten Daten
+                            komplizierter heraus, als bei einer zeitbasierten. Die ermittelten Daten
                             entsprechen allerdings genauer der tatsächlichen Nutzung. Eine streckenbasierte Abrechnung
                             könnte durch die ständige Übermittlung von Ortungsdaten durch das Zweirad erfolgen. Eine
                             zeitbasierte Abrechnung kann mit der Erfassung des Entsperrungs- und Sperrungszeitpunktes
