--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
                 <div class="column">
                     <span class="author-annotation">Paul Brätz</span>
                     <span>
-                        Aus der Zieldefinition lassen sich folgende Funktionen ableiten, die für den Betrieb des Systems vonnöten
+                        Aus der Zieldefinition lassen sich folgende Funktionen ableiten, die für den Betrieb des Systems
+                        vonnöten
                         sind.
                     </span>
                     <div class="topic" id="funktion-ortung">
@@ -438,8 +439,10 @@
                             Sperrung / Entriegelung
                         </div>
                         <div class="content">
-                            Die Sperrung und Entsperrung des Zweirades muss möglich sein. Dabei ist nur die Nutzung des
-                            Rades zu verhindern, nicht der Transport selbst. Die Sperrung muss durch den Nutzer
+                            Die Sperrung und Entsperrung des Zweirades muss möglich sein. Bei der Sperrung ist nur die
+                            Nutzung des
+                            Rades zu verhindern, nicht dessen Transport. Das Verhindern eines Abtransportes würde einen
+                            Stationsbetrieb erzwingen. Die Sperrung muss durch den Nutzer
                             authorisiert werden, um gefährliche Sperrungen während der Nutzung zu verhindern. Die
                             Entsperrung hingegen kann durch die zentrale Verwaltung, das Rad selbst oder den Nutzer
                             authorisiert werden.
