--- a/index.html
+++ b/index.html
@@ -457,8 +457,7 @@
                             Neuverteilung benötigt. Hier müssen solche Hotspots durch Analyse von Bewegungsdaten
                             ermittelt werden. Räder, die über einen längeren Zeitraum ungenutzt bleiben, sollten an
                             Sammelstellen oder ermittelte Abfahrtshotspots verteilt werden. Diese Neuverteilung sollte
-                            bei einer aktiven Lösung periodisch und bei einer passiven kontinuierlich stattfinden. Eine
-                            aktive Lösung würde vom System periodisch initiiert, eine passive liefe durchgehend.
+                            als aktive Lösung periodisch vom System initiiert werden oder als passive kontinuierlich wirken.
                         </div>
                     </div>
                     <div class="topic" id="funktion-entsorgung">
