--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                         <div class="content">
                             <div class="column">
                                 <span>
-                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild ableiten. Der
+                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild (s. Abb1) ableiten. Der
                                     Energiefluss der Stromversorgung ist offen, da er in Abhängigkeit von der
                                     gewählten Komponente terminiert.
                                 </span>
@@ -682,7 +682,7 @@
                             <div class="column">
                                 <span>
                                     Aus der Komponentenwahl und dem abstrakten Systemabbild lässt sich ein konkretes
-                                    Systemabbild bilden.
+                                    Systemabbild (s. Abb2) bilden.
                                 </span>
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Konkret.jpg">
