--- a/index.html
+++ b/index.html
@@ -801,13 +801,13 @@
                                 <span class="author-annotation">Paul Brätz</span>
                                 <span>
                                     Zweiradverleihsysteme sind auf den ersten Blick vermeintlich
-                                    umweltschonender, was sie aus ökologischer Sicht sympathisch macht.
-                                    Allein die Tatsache, dass eine Diversifikation der öffentlich
+                                    umweltschonender als klassische öffentliche Transportmittel, was sie aus ökologischer Sicht attraktiv macht.
+                                    Die Tatsache, dass eine Diversifikation der öffentlich
                                     verfügbaren Verkehrs- und Transportmittel angestrebt wird, ist als
                                     gesellschaftlich und wirtschaftlich positiv anzusehen. Der Wettbewerb
-                                    wird gestärkt, auch wenn sich der vermeintliche ökologische Vorteil
+                                    wird gestärkt - auch, wenn sich der vermeintliche ökologische Vorteil
                                     nicht bewahrheitet. Ein Negativum einiger Anbieter solcher Systeme ist
-                                    der Zwang einer zu installierenden App für ein Interface, welches seinen
+                                    der Zwang einer zu installierenden App. Diese bietet oft ein Interface, welches seinen
                                     Zweck perfekt als Webseite im Browser füllen könnte. Die Nutzung einer
                                     App schränkt den Nutzer erheblich in seiner technischen Autonomie ein.
                                     Skript- und Adblocker können nicht genutzt werden. Schädliche
