--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         Systemanalyse von Zweiradverleihsystemen
     </title>
     <meta charset="utf8" />
-    <base href="https://paulbraetz.github.io/Zweiradverleihsysteme/">
     <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css?v=2" />
     <link rel="icon" type="image/x-icon" href="wwwroot/favicon.ico?v=1" />
 </head>
@@ -42,183 +41,183 @@
             <div class="content">
                 <ol class="table-of-contents">
                     <li>
-                        <a href="index#zieldefinition">
+                        <a href="#zieldefinition">
                             Zieldefinition
                         </a>
                         <ol>
                             <li>
-                                <a href="index#automatisierung">
+                                <a href="#automatisierung">
                                     Automatisierung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#verwaltung">
+                                <a href="#verwaltung">
                                     Verwaltung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#wartung">
+                                <a href="#wartung">
                                     Wartung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#wirtschaftlichkeit">
+                                <a href="#wirtschaftlichkeit">
                                     Wirtschaftlichkeit
                                 </a>
                             </li>
                             <li>
-                                <a href="index#lageunabhängigkeit">
+                                <a href="#lageunabhängigkeit">
                                     Lageunabhägigkeit
                                 </a>
                             </li>
                             <li>
-                                <a href="index#datenschutz">
+                                <a href="#datenschutz">
                                     Datenschutz
                                 </a>
                             </li>
                         </ol>
                     </li>
                     <li>
-                        <a href="index#funktionsanalyse">
+                        <a href="#funktionsanalyse">
                             Funktionsanalyse
                         </a>
                         <ol>
                             <li>
-                                <a href="index#funktion-ortung">
+                                <a href="#funktion-ortung">
                                     Ortung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-abrechnung">
+                                <a href="#funktion-abrechnung">
                                     Abrechnung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-wartung">
+                                <a href="#funktion-wartung">
                                     Wartung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-interface">
+                                <a href="#funktion-interface">
                                     Benutzeroberfläche
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-stromversorgung">
+                                <a href="#funktion-stromversorgung">
                                     Stromversorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-sperrung">
+                                <a href="#funktion-sperrung">
                                     Sperrung / Entriegelung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-neuverteilung">
+                                <a href="#funktion-neuverteilung">
                                     Neuverteilung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-entsorgung">
+                                <a href="#funktion-entsorgung">
                                     Entsorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-verwaltung">
+                                <a href="#funktion-verwaltung">
                                     Verwaltung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#funktion-systemabbild">
+                                <a href="#funktion-systemabbild">
                                     Systemabbild - Abstrakt
                                 </a>
                             </li>
                         </ol>
                     </li>
                     <li>
-                        <a href="index#komponentenwahl">
+                        <a href="#komponentenwahl">
                             Komponentenwahl
                         </a>
                         <ol>
                             <li>
-                                <a href="index#komponente-ortung">
+                                <a href="#komponente-ortung">
                                     Ortung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-abrechnung">
+                                <a href="#komponente-abrechnung">
                                     Abrechnung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-wartung">
+                                <a href="#komponente-wartung">
                                     Wartung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-interface">
+                                <a href="#komponente-interface">
                                     Benutzeroberfläche
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-stromversorgung">
+                                <a href="#komponente-stromversorgung">
                                     Stromversorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-sperrung">
+                                <a href="#komponente-sperrung">
                                     Sperrung / Entriegelung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-neuverteilung">
+                                <a href="#komponente-neuverteilung">
                                     Neuverteilung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-entsorgung">
+                                <a href="#komponente-entsorgung">
                                     Entsorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-verwaltung">
+                                <a href="#komponente-verwaltung">
                                     Verwaltung
                                 </a>
                             </li>
                             <li>
-                                <a href="index#komponente-systemabbild">
+                                <a href="#komponente-systemabbild">
                                     Systemabbild - Konkret
                                 </a>
                             </li>
                         </ol>
                     </li>
                     <li>
-                        <a href="index#leistungsanalyse">
+                        <a href="#leistungsanalyse">
                             Leistungsanalyse
                         </a>
                     </li>
                     <li>
-                        <a href="index#umsetzungskritik">
+                        <a href="#umsetzungskritik">
                             Umsetzungskritik
                         </a>
                     </li>
                     <li>
-                        <a href="index#quellenverzeichnis">
+                        <a href="#quellenverzeichnis">
                             Quellen
                         </a>
                         <ol>
                             <li>
-                                <a href="index#wissenschaft">
+                                <a href="#wissenschaft">
                                     Wissenschaft
                                 </a>
                             </li>
                             <li>
-                                <a href="index#medien">
+                                <a href="#medien">
                                     Medien
                                 </a>
                             </li>
                             <li>
-                                <a href="index#autoren">
+                                <a href="#autoren">
                                     Autoren
                                 </a>
                             </li>
@@ -530,7 +529,7 @@
                                 Satelliten berücksichtigt werden. Nichtdestotrotz sind GPS-Module unter den
                                 Zweiradverleihsystemen weit verbreitet. Zweiräder der Firma
                                 Nextbike nutzen ein solches Modul<a class="source-reference"
-                                    href="index#sources"><sup>[1]</sup></a>. Um technisch unabhängiger
+                                    href="#sources"><sup>[1]</sup></a>. Um technisch unabhängiger
                                 zu werden, wird das hier präsentierte Konzept allerdings ein generisches GNSS Modul
                                 nutzen.
                             </span>
@@ -574,7 +573,7 @@
                                 durch Warnungen durch die Sensorik des Zweirades angewiesen. Diese Zweiräder werden dann
                                 mithilfe eines Transporters eingesammelt
                                 und in die Werkstatt befördert. Die die Transporter werden sie auch wieder neu
-                                verteilt.<a class="source-reference" href="index#sources"><sup>[3]</sup></a>
+                                verteilt.<a class="source-reference" href="#sources"><sup>[3]</sup></a>
                             </span>
                         </div>
                     </div>
@@ -602,7 +601,7 @@
                                 Welche Modell verwendet wird hängt vom Anbieter des Zweirades ab. So werden LTE-M, WPAN
                                 und
                                 GSM-Module verwendet. <a class="source-reference"
-                                    href="index#sources"><sup>[1][7][2]</sup></a>
+                                    href="#sources"><sup>[1][7][2]</sup></a>
                                 Wichtig bei den Modulen ist ein geringer Stromverbrauch als auch ein guter Empfang um
                                 selbst in Häuserschluchten noch eine Verbindung zu haben.
                             </span>
@@ -717,12 +716,12 @@
                                 Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und
                                 umgesetzt sind, besteht eine starke Wetter- und damit Jahreszeitenabhängigkeit. Die
                                 Nutzung ist nur halbjährlich sinnvoll <a class="source-reference"
-                                    href="index#sources"><sup>[7.1]</sup></a>. Einige Systeme weisen eine nachteilhafte
+                                    href="#sources"><sup>[7.1]</sup></a>. Einige Systeme weisen eine nachteilhafte
                                 Abhängigkeit von Infratsruktur auf <a class="source-reference"
-                                    href="index#sources"><sup>[7.2]</sup></a>. Bemängelt werden auch die Nutzungskosten
+                                    href="#sources"><sup>[7.2]</sup></a>. Bemängelt werden auch die Nutzungskosten
                                 bei Anwendung von GSM-Modulen; diese werfen für den Gebrauch des Mobilfunknetzes Kosten
                                 auf. Die Nutzung von GPS und GSM mindert allerdings den benötigten Verwaltungsaufwand <a
-                                    class="source-reference" href="index#sources"><sup>[7.3]</sup></a>.
+                                    class="source-reference" href="#sources"><sup>[7.3]</sup></a>.
                             </span>
                         </div>
                     </div>
@@ -734,14 +733,14 @@
                             <span>
                                 Einige Quellen bemängeln, dass geliehene Zweiräder nicht ordentlich abgestellt würden.
                                 Ansammlungen solcher Räder behindern den Straßen- und Bürgersteigverkehr <a
-                                    class="source-reference" href="index#sources"><sup>[8]</sup></a>. Auch soll laut
+                                    class="source-reference" href="#sources"><sup>[8]</sup></a>. Auch soll laut
                                 einer zitierten Studie die Verfügbarkeit von elektrischen Rollern das Autonutzverhalten
                                 nicht erheblich beeinflussen <a class="source-reference"
-                                    href="index#sources"><sup>[8]</sup></a>. Die zitierte Studie konnte allerdings nicht
+                                    href="#sources"><sup>[8]</sup></a>. Die zitierte Studie konnte allerdings nicht
                                 nachvollzogen werden. Das Handelsblatt kritisiert das Zweiradverleihsystem der Deutschen
                                 bahn, nachdem dieses ohne transparente Ankündigung aus dem "freefloating"-Betrieb in
                                 einen stationsbasierten übergegangen war <a class="source-reference"
-                                    href="index#sources"><sup>[9]</sup></a>.
+                                    href="#sources"><sup>[9]</sup></a>.
                             </span>
                         </div>
                     </div>
